# PoloniexAPI-Wrapper

./: CMakeLists.txt  PoloniexClient.cpp  PoloniexClient.hpp  Request.cpp  Request.hpp  test.cpp
